# notes-on-secure-apis

./: README.md
client/2-basic-cors/: client.js  index.html  server.py
client/3-basic-tls/: index.html
client/4-basic-jwt/: client.js  index.html
client/jwt/: client.js  index.html  server.py
client/simple-client/: client.js  styles.css
client/tls/: client.js  index.html  server.py
server/: .env  Cargo.toml  chinook.db
server/src/: messages.rs  models.rs
