[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = {version = "4.2.1", features = ["openssl"]}
anyhow = "1.0.66"
dotenv = "0.15.0"
futures-util = "0.3.25"
hmac = "0.12.1"
jwt = "0.16.0"
openssl = {version = "0.10.42", features = ["v110"]}
serde = "1.0.147"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", default-features = false, features = [ "runtime-tokio-rustls", "macros", "sqlite" ] }
parking_lot = "0.12.1"
